--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: hublanc <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/04 12:07:21 by hublanc           #+#    #+#              #
-#    Updated: 2017/10/31 16:46:33 by lbopp            ###   ########.fr        #
+#    Updated: 2017/11/06 03:04:47 by amazurie         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
